<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomePage"
    android:background="@drawable/wave_background"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="25dp">
        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:background="#D3D3D3"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:id="@+id/seacrh_txtHomePage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/search_for_blood_donor"
                    android:textSize="26sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />
                <Spinner
                    android:id="@+id/blood_group_spinnerHomePage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round_border"
                    android:entries="@array/bloodGroupItem"
                    android:padding="12dp"
                    />
                <Spinner
                    android:id="@+id/cities_spinnerHomePage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round_border"
                    android:entries="@array/cities"
                    android:padding="12dp"
                    />
                <Button
                    android:id="@+id/search_btn_homePage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round_btn"
                    android:text="@string/search"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:text="@string/OR"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/logout_btn_HomePage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_btn"
                    android:text="@string/logout"
                    android:textColor="#ffffff"
                    android:textSize="18sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>



</RelativeLayout>