<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage">

    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/waveView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topView" />

    <ImageView
        android:id="@+id/topPerson"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_blood_donation"
        app:layout_constraintBottom_toTopOf="@+id/waveView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waveView"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_person"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="8sp"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="8sp"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="16sp" />


        <Spinner
            android:id="@+id/blood_group_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_border"
            android:entries="@array/bloodGroupItem"
            android:padding="16dp" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8sp"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/re_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8sp"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_btn"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/into_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/into_login"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="16sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>